[metadata]
name = ruggedpod-tools
version = 0.1.0
author = OCP
summary = Misc tools for RuggedPOD development and infrastructure
url = https://github.com/RuggedPOD/ruggedpod-tools

classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[files]
packages =
    ruggedpod_tools

[entry_points]
console_scripts =
    ruggedpod-tools = ruggedpod_tools.cli:main

[pytest]
addopts = ruggedpod_tools --pep8
pep8maxlinelength = 120
